k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fit-strike-app
spec:
  replicas: 0
  selector:
    matchLabels:
      app: fit-strike-app
  template:
    metadata:
      labels:
        app: fit-strike-app
    spec:
      containers:
      - name: fit-strike-app
        image: lucascamilo2024/fit-strike-api:latest
        ports:
        - containerPort: 8080
