k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fit-strike-app-service
spec:
  type: NodePort
  selector:
    app: fit-strike-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080 # porta externa, pode ajustar
